--- a/To-Do-App/.env
+++ b/To-Do-App/.env
@@ -1,3 +1,5 @@
 PORT=8000
-MONGO_URI=mongodb://localhost:27017/todo_app
+# MONGO_URI=mongodb://localhost:27017/todo_app
+MONGO_URI=mongodb://mongo:27017/todoapp
+
 JWT_SECRET=yamigutm@124
