--- a/To-Do-App/Dockerfile
+++ b/To-Do-App/Dockerfile
@@ -1,18 +1,23 @@
-# Use Node.js as the base image
+# Use Node.js base image
 FROM node:18
 
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json (if it exists) to install dependencies
+# Copy package.json and package-lock.json first (for better caching)
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
-# Copy the rest of the backend code
+# Copy the rest of the app
 COPY . .
 
-# Expose the port the app will run on
+# Build TypeScript code
+#RUN npm run build
+
+# Expose the backend port
 EXPOSE 8000
 
-# Command to run the app
+# Start the compiled app
 CMD ["npm", "run", "dev"]
