--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,12 @@
+# frontend/Dockerfile
 FROM node:18
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
-
 COPY . .
 
+RUN npm install
+
 EXPOSE 3000
+
 CMD ["npm", "run", "dev"]
